--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <version.drone>1.3.0.Final</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.2.Final</version.graphene>
+        <version.warp>1.0.0.Alpha7</version.warp>
         <version.recorder>1.0.0.Alpha2</version.recorder>
         <!--arquillian properties -->
         <arquillian.serverHome>/home/rmpestano/jboss-eap-6.1</arquillian.serverHome>
@@ -100,6 +101,30 @@
             <version>2.3.3.Final</version>
             <scope>provided</scope>
         </dependency>
+        <!--dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+            <version>2.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>httpmime</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>httpcore</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>httpclient</artifactId>
+                    <groupId>org.apache.httpcomponents</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-mapper-asl</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -182,6 +207,20 @@
             <artifactId>arquillian-desktop-video-recorder</artifactId>
             <version>${version.recorder}</version>
         </dependency-->
+
+        <!-- warp -->
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-warp</artifactId>
+			<type>pom</type>
+			<scope>test</scope>
+			<version>${version.warp}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-warp-jsf</artifactId>
+			<version>${version.warp}</version>
+		</dependency>
 
 
         <dependency>
@@ -565,6 +604,29 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <!-- gray box tests -->
+            <id>warp-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/*Warp.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*BaseWarp.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>jboss-remote</id>
             <properties>
