--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,15 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- lib versions -->
         <conventions.version>1.3.2</conventions.version>
+        <version.selenium>2.43.1</version.selenium>
+        <version.drone>2.0.0.Alpha2</version.drone>
+        <version.arquillian>1.1.5.Final</version.arquillian>
+        <version.graphene>2.0.3.Final</version.graphene>
+        <version.warp>1.0.0.Alpha7</version.warp>
+        <version.persistence>1.0.0.Alpha7</version.persistence>
+        <version.recorder>1.0.0.Alpha2</version.recorder>
         <!--arquillian properties -->
         <arquillian.serverHome>/home/rmpestano/jboss-eap-6.1</arquillian.serverHome>
         <arquillian.browser>firefox</arquillian.browser>
@@ -160,25 +168,110 @@
 
 
         <!-- arquillian -->
+        <!-- arquillian -->
         <dependency>
-            <groupId>org.jboss.arquillian</groupId>
-            <artifactId>arquillian-all</artifactId>
-            <version>1.0.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
-            <version>1.4.01</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.shrinkwrap</groupId>
-            <artifactId>shrinkwrap-api</artifactId>
-            <version>1.2.2</version>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!--arquillian persistence(dbunit) -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-api</artifactId>
+            <version>1.0.0.Alpha6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-impl</artifactId>
+            <version>1.0.0.Alpha6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- shrinkWrap resolvers -->
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-depchain</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.graphene</groupId>
+            <artifactId>graphene-webdriver</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+            <version>${version.graphene}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-phantom-driver</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- headless browser phantom.js -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-phantom-driver</artifactId>
+            <version>1.1.2.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- arquillian jbehave -->
+        <dependency>
+            <groupId>org.jboss.arquillian.jbehave</groupId>
+            <artifactId>arquillian-jbehave-core</artifactId>
+            <version>1.0.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- arquillian recorder -->
+        <!--dependency> <groupId>org.arquillian.extension</groupId> <artifactId>arquillian-recorder-api</artifactId>
+            <version>${version.recorder}</version> </dependency> <dependency> <groupId>org.arquillian.extension</groupId>
+            <artifactId>arquillian-desktop-video-recorder</artifactId> <version>${version.recorder}</version>
+            </dependency -->
+
+        <!-- warp -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-warp</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+            <version>${version.warp}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-warp-jsf</artifactId>
+            <version>${version.warp}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-client-api</artifactId>
+            <version>1.0.0.Alpha3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-client-impl-2x</artifactId>
+            <version>1.0.0.Alpha3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-warp-impl-resteasy</artifactId>
+            <version>1.0.0.Alpha3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+            <version>1.0.1.Final</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
@@ -205,34 +298,58 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.2.5</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3.4</version>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
             <scope>test</scope>
         </dependency>
-
-
-        <!-- end test dependencies -->
-
-        <!--dependency> <groupId>javax</groupId> <artifactId>javaee-api</artifactId>
-            <version>6.0</version> <scope>provided</scope> </dependency -->
-        <!-- <dependency> <groupId>org.glassfish.main.extras</groupId> <artifactId>glassfish-embedded-all</artifactId>
-            <version>3.1.2</version> <scope>provided</scope> </dependency> -->
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.conventionsframework</groupId>
                 <artifactId>conventions-bom</artifactId>
                 <version>${conventions.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${version.arquillian}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.selenium</groupId>
+                <artifactId>selenium-bom</artifactId>
+                <version>${version.selenium}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.extension</groupId>
+                <artifactId>arquillian-drone-bom</artifactId>
+                <version>${version.drone}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -996,6 +1113,19 @@
 
         <!-- selenium web drivers -->
         <profile>
+            <id>sauce-labs</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.saucelabs</groupId>
+                    <artifactId>arquillian-sauce-drone</artifactId>
+                    <version>0.0.4</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <!-- selenium web drivers -->
+        <profile>
             <id>webdriver-firefox</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -1031,15 +1161,10 @@
 
     <repositories>
         <repository>
-            <id>arquillian all maven repo</id>
-            <url>http://arquillian-all-repo.googlecode.com/git/</url>
+            <id>arquillian jbehave UNofficial maven repo</id>
+            <url>http://arquillian-jbehave-repo.googlecode.com/git/</url>
             <layout>default</layout>
         </repository>
-        <!--<repository>-->
-        <!--<id>arquillian jbehave UNofficial maven repo</id>-->
-        <!--<url>http://arquillian-jbehave-repo.googlecode.com/git/</url>-->
-        <!--<layout>default</layout>-->
-        <!--</repository>-->
         <repository>
             <id>Jboss AS dist UNofficial maven repo</id>
             <url>http://jboss-as-dist.googlecode.com/git/</url>
@@ -1058,87 +1183,96 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-
+        <repository>
+            <id>saucelabs-repository</id>
+            <url>https://repository-saucelabs.forge.cloudbees.com/release</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-            <testResource>
-                <directory>src/test/java/</directory>
-                <includes>
-                    <include>**/*.story</include>
-                </includes>
-            </testResource>
-        </testResources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-            <!-- deploy -->
-            <plugin>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.0.1.Final</version>
-                <configuration>
-                    <id>wildfly-deploy</id>
-                    <hostname>localhost</hostname>
-                    <port>9990</port>
-                    <filename>${project.build.finalName}.war</filename>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>deploy-only</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </configuration>
-            </plugin>
-        </plugins>
-        <finalName>archetype</finalName>
-    </build>
+<build>
+<resources>
+    <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+    </resource>
+</resources>
+<testResources>
+    <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+    </testResource>
+    <testResource>
+        <directory>src/test/java/</directory>
+        <includes>
+            <include>**/*.story</include>
+        </includes>
+    </testResource>
+</testResources>
+<plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.1.1</version>
+        <configuration>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+            <execution>
+                <id>default-cli</id>
+                <goals>
+                    <goal>copy-dependencies</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+            <skipTests>true</skipTests>
+        </configuration>
+    </plugin>
+    <!-- deploy -->
+    <plugin>
+        <groupId>org.wildfly.plugins</groupId>
+        <artifactId>wildfly-maven-plugin</artifactId>
+        <version>1.0.1.Final</version>
+        <configuration>
+            <id>wildfly-deploy</id>
+            <hostname>localhost</hostname>
+            <port>9990</port>
+            <filename>${project.build.finalName}.war</filename>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>deploy-only</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </configuration>
+    </plugin>
+</plugins>
+<finalName>archetype</finalName>
+</build>
 
-</project>
+        </project>
