--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: java
 jdk: oraclejdk7
-script: mvn install -Pft-tests -Pwildfly-managed -Pjacoco -Pcoveralls -Premote-selenium
-addons:
-  sauce_connect:
-    username: rmpestano
-    access_key: 91af0903-cfea-4464-84d7-12a49c2b4e73
+script: mvn install -Pall-tests -Pwildfly-managed -Pjacoco -Pcoveralls -Pwebdriver-phantomjs
+
