--- a/pom.xml
+++ b/pom.xml
@@ -698,7 +698,7 @@
                             <runOrder>reversealphabetical</runOrder>
                             <includes>
                                 <include>**/*It.java</include>
-                                <!--<include>**/*Bdd.java</include>-->
+                                <include>**/*Bdd.java</include>
                                 <include>**/*Suite.java</include>
                             </includes>
                             <excludes>
