--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,14 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
+		
+		 <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+		 
 
         <!-- arquillian recorder -->
         <!--dependency> <groupId>org.arquillian.extension</groupId> <artifactId>arquillian-recorder-api</artifactId>
@@ -619,7 +627,7 @@
         </profile>
         <profile>
             <!-- behaviour -->
-            <id>bdd-tests</id>
+            <id>bdd-tests</id>			 
             <build>
                 <plugins>
                     <plugin>
